   main class or file.
 - Reduce memory reserved for JVM overhead and make stack size
   configurable in Java compile script.
 - Fix runguard bug when stdout/stderr are not redirected to file.
 - Add support for Kotlin by mounting /bin in chroot environment.
 - Add options to have second scoreboard resolution and to suppress
   problem information from the scoreboard. Thanks Marc Furon.
 - Add helper script dj_run_chroot to perform chroot operations.
 - [security] Fix team permission for viewing clarification categories.
 - Many small issues fixed and documentation improvements.

Version 5.2.0 - DEV
-------------------
 - [security] bind PHP session cookie to specific web URI to prevent
   sharing sessions between different websites on the same host.
 - [security] Add RUNGROUP configure setting to make sure that submissions
   do not have access to group root files. (#250 thanks Richard Lobb)
 - Allow team to download testcase data marked as 'sample'.
 - Add icons to menu bars.
 - Allow to filter submissions on team, problem, language.
 - Show when a problem can not be judged on any judgehost.
 - Add "internal error" messages to deal more graceously with judgehost
   problems e.g. due to faulty compile or compare scripts.
 - Detect low disk space on judgehosts and decrease space usage.
 - Support OpenID Connect as login authentication provider.
 - Various improvements to the import/export functionality.
 - Use current contest as default when uploading problem archive.
 - Allow to add user during team creation in UI.
 - Make problem texts always downloadable for jury.
 - Decode HTML entities for proper display of error messages in
   submit client.
 - The event feed and REST API now comply with ICPC WF 2016 specs.
 - Disallow deleting a judgehost that has performed judgings,
   since the dangling reference from the judging table makes
   submissions being rejudged again.
 - Performance: merge jury and public versions of cache database